--- a/app/application.yml
+++ b/app/application.yml
@@ -83,6 +83,55 @@ services:
       - @url.helper
 
   ######################################################################################################################
+  # SERVER CONTROLLERS
+  ######################################################################################################################
+
+  servers.page:
+    class: 'QL\Hal\Controllers\Server\ServersController'
+    arguments:
+      - @servers.twig
+      - @layout
+      - @server.repo
+  servers.twig:
+    parent: 'twig.template'
+    arguments: ['server/servers.twig']
+
+  server.page:
+    class: 'QL\Hal\Controllers\Server\ServerController'
+    arguments:
+      - @server.twig
+      - @layout
+      - @server.repo
+      - @deployment.repo
+  server.twig:
+    parent: 'twig.template'
+    arguments: ['server/server.twig']
+
+  server.admin.add.page:
+    class: 'QL\Hal\Controllers\Server\AdminAddController'
+    arguments:
+      - @server.admin.add.twig
+      - @layout
+      - @server.repo
+      - @environment.repo
+      - @doctrine.em
+      - @session
+      - @url.helper
+  server.admin.add.twig:
+    parent: 'twig.template'
+    arguments: ['server/admin.add.twig']
+  server.admin.add.handle:
+    parent: 'server.admin.add.page'
+
+  server.admin.remove.handle:
+    class: 'QL\Hal\Controllers\Server\AdminRemoveHandle'
+    arguments:
+      - @server.repo
+      - @deployment.repo
+      - @doctrine.em
+      - @session
+      - @url.helper
+  ######################################################################################################################
   # USER CONTROLLERS
   ######################################################################################################################
 
