Turn debug off for test

--- a/app/config.test.yml
+++ b/app/config.test.yml
@@ -4,7 +4,7 @@ imports:
   - resource: ../vendor/ql/hal-core/config/di.yml
 
 parameters:
-  debug:            true
+  debug:            false
 
   doctrine.mappings:
     - "%root%/src/QL/Hal/Core/Entity"
