--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -19,19 +19,19 @@
         timeoutForSmallTests="2"
         verbose="true">
 
-    <!--
     <logging>
-        <log type="coverage-html" target="phpunit/coverage" charset="UTF-8" highlight="true" lowUpperBound="50" highLowerBound="80"/>
-        <log type="coverage-clover" target="phpunit/clover.xml"/>
-        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
-        <log type="testdox-html" target="phpunit/testdox.html"/>
-        <log type="testdox-text" target="phpunit/testdox.txt"/>
-    </logging>
+    <!--
+        <log type="coverage-html" target="../phpunit/coverage" charset="UTF-8" highlight="true" lowUpperBound="50" highLowerBound="80"/>
+        <log type="coverage-clover" target="../phpunit/clover.xml"/>
+        <log type="testdox-html" target="../phpunit/testdox.html"/>
+        <log type="testdox-text" target="../phpunit/testdox.txt"/>
     -->
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+    </logging>
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>src/</directory>
+            <directory>../src/</directory>
         </whitelist>
     </filter>
 
@@ -41,7 +41,7 @@
 
     <testsuites>
         <testsuite name="HAL 9000">
-            <directory>tests/QL/Hal</directory>
+            <directory>QL/Hal</directory>
         </testsuite>
     </testsuites>
 
