Add admin links to standard nav

--- a/app/pages.yml
+++ b/app/pages.yml
@@ -262,6 +262,18 @@ services:
       - @url.helper
 
   ######################################################################################################################
+  # ADMIN CONTROLLERS
+  ######################################################################################################################
+
+
+  admin.dashboard.page:
+    parent: 'static.controller'
+    arguments: ['@admin.dashboard.twig']
+  admin.dashboard.twig:
+    parent: 'twig.template'
+    arguments: ['admin/dashboard.twig']
+
+  ######################################################################################################################
   # GENERAL USE CONTROLLERS
   ######################################################################################################################
 
